Firebase integration and new component generated

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>DockerAngular</title>
+  <title>Angular Firebase - Docker and Heroku</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,12 +11,12 @@
 <body>
   <app-root></app-root>
   <!-- The core Firebase JS SDK is always required and must be listed first -->
-  <script src="https://www.gstatic.com/firebasejs/6.1.0/firebase-app.js"></script>
+  <!-- <script src="https://www.gstatic.com/firebasejs/6.1.0/firebase-app.js"></script> -->
 
   <!-- TODO: Add SDKs for Firebase products that you want to use
       https://firebase.google.com/docs/web/setup#config-web-app -->
 
-  <script>
+  <!-- <script>
     // Your web app's Firebase configuration
     var firebaseConfig = {
       apiKey: "AIzaSyCpOPNUulYG2QYamkvkI0g3qhxSF7Rf8HU",
@@ -29,6 +29,6 @@
     };
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
-  </script>
+  </script> -->
 </body>
 </html>
